--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Blooger</title>
+    <title>Demo site</title>
 
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="./css/all.css">
@@ -30,7 +30,7 @@
     <nav class="nav">
         <div class="nav-menu flex-row">
             <div class="nav-brand">
-                <a href="#" class="text-gray">Blooger</a>
+                <a href="#" class="text-gray">Welcome to Anmol Travels</a>
             </div>
             <div class="toggle-collapse">
                 <div class="toggle-icons">
@@ -43,16 +43,16 @@
                         <a href="#">Home</a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">Category</a>
+                        <a href="#">Car Rental</a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">Archive</a>
+                        <a href="#">Hotels</a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">Pages</a>
+                        <a href="#">Train Booking</a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">Contact Us</a>
+                        <a href="#">Travel Packages</a>
                     </li>
                 </ul>
             </div>
@@ -92,33 +92,33 @@
                         <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
                             <img src="./assets/Blog-post/post-1.jpg" alt="post-1">
                             <div class="blog-title">
-                                <h3>London Fashion week's continued the evolution</h3>
-                                <button class="btn btn-blog">Fashion</button>
-                                <span>2 minutes</span>
+                                <h3>Baba Mandir Darshan</h3>
+                                <button class="btn btn-blog">Visit</button>
+                                <span>Price</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-in" data-aos-delay="200">
                             <img src="./assets/Blog-post/post-3.jpg" alt="post-1">
                             <div class="blog-title">
-                                <h3>London Fashion week's continued the evolution</h3>
-                                <button class="btn btn-blog">Fashion</button>
-                                <span>2 minutes</span>
+                                <h3>Trikut Parvat</h3>
+                                <button class="btn btn-blog">Visit</button>
+                                <span>Price</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-left" data-aos-delay="200">
                             <img src="./assets/Blog-post/post-2.jpg" alt="post-1">
                             <div class="blog-title">
-                                <h3>London Fashion week's continued the evolution</h3>
-                                <button class="btn btn-blog">Fashion</button>
-                                <span>2 minutes</span>
+                                <h3>Tapowan</h3>
+                                <button class="btn btn-blog">Visit</button>
+                                <span>Price</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
                             <img src="./assets/Blog-post/post-5.png" alt="post-1">
                             <div class="blog-title">
-                                <h3>London Fashion week's continued the evolution</h3>
-                                <button class="btn btn-blog">Fashion</button>
-                                <span>2 minutes</span>
+                                <h3>Nandan Pahar</h3>
+                                <button class="btn btn-blog">Visit</button>
+                                <span>Price</span>
                             </div>
                         </div>
                     </div>
@@ -236,26 +236,26 @@
                 </div>
                 <aside class="sidebar">
                     <div class="category">
-                        <h2>Category</h2>
+                        <h2>Services We Provide</h2>
                         <ul class="category-list">
                             <li class="list-items" data-aos="fade-left" data-aos-delay="100">
-                                <a href="#">Software</a>
+                                <a href="#">Hotel Booking</a>
                                 <span>(05)</span>
                             </li>
                             <li class="list-items" data-aos="fade-left" data-aos-delay="200">
-                                <a href="#">Techonlogy</a>
+                                <a href="#">Car Rental</a>
                                 <span>(02)</span>
                             </li>
                             <li class="list-items" data-aos="fade-left" data-aos-delay="300">
-                                <a href="#">Lifestyle</a>
+                                <a href="#">Train Ticket Booking</a>
                                 <span>(07)</span>
                             </li>
                             <li class="list-items" data-aos="fade-left" data-aos-delay="400">
-                                <a href="#">Shopping</a>
+                                <a href="#">Flight Ticket Booking</a>
                                 <span>(01)</span>
                             </li>
                             <li class="list-items" data-aos="fade-left" data-aos-delay="500">
-                                <a href="#">Food</a>
+                                <a href="#">Best Travel Packages</a>
                                 <span>(08)</span>
                             </li>
                         </ul>
